--- a/.github/workflows/dusk.yml
+++ b/.github/workflows/dusk.yml
@@ -18,6 +18,7 @@ jobs:
           x86_64-unknown-linux-gnu,
           x86_64-apple-darwin,
           aarch64-apple-darwin,
+          aarch64-unknown-linux-gnu,
         ]
         include:
           - os: ubuntu-latest
@@ -26,6 +27,8 @@ jobs:
             target: x86_64-apple-darwin
           - os: macos-latest-xlarge
             target: aarch64-apple-darwin
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
     runs-on: ${{ matrix.os }}
     steps:
       - name: Check out repository
