--- a/.github/workflows/dusk.yml
+++ b/.github/workflows/dusk.yml
@@ -16,17 +16,17 @@ jobs:
       matrix:
         target: [
           x86_64-unknown-linux-gnu,
-          x86_64-apple-darwin,
-          aarch64-apple-darwin,
+          # x86_64-apple-darwin,
+          # aarch64-apple-darwin,
           aarch64-unknown-linux-gnu,
         ]
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-          - os: macos-latest-large
-            target: x86_64-apple-darwin
-          - os: macos-latest-xlarge
-            target: aarch64-apple-darwin
+          # - os: macos-latest-large
+          #   target: x86_64-apple-darwin
+          # - os: macos-latest-xlarge
+          #   target: aarch64-apple-darwin
           - os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
     runs-on: ${{ matrix.os }}
