--- a/.github/workflows/dusk.yml
+++ b/.github/workflows/dusk.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Setup dependencies
         if: matrix.os == 'ubuntu-latest'
-        run: sudo apt update && sudo apt install -y ninja-build  gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu g++-aarch64-linux-gnu llvm-dev
+        run: sudo apt update && sudo apt install -y ninja-build  gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu g++-aarch64-linux-gnu llvm-18-dev
 
       - name: Setup dependencies
         if: startsWith(matrix.os, 'macos')
